# dataengkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DIALECT_COMPAT.md  README.md  ROADMAP.md  pyproject.toml  retention_prototype.py  run_tests.sh
.github/ISSUE_TEMPLATE/: component_request.md
.github/workflows/: publish.yml  test.yml
src/dataengkit/: __init__.py  _base.py  _dialect.py  _exceptions.py  _input.py  _types.py
src/dataengkit/analytics/: __init__.py
src/dataengkit/modeling/: __init__.py
src/datakit/: __init__.py  _base.py  _dialect.py  _input.py
src/datakit/analytics/: __init__.py
src/datakit/engineering/: __init__.py
tests/: conftest.py  test_dialect.py  test_exceptions.py  test_input.py  test_retention.py
tests/fixtures/: mixpanel.py
