[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataengkit"
version = "0.1.0"
description = "The scikit-learn of data engineering and analytics"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["data engineering", "analytics", "retention", "cohort", "SaaS metrics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "duckdb>=1.1.0",
    "pandas>=2.0.0",
    "sqlglot>=20.0,<22",
]

[project.optional-dependencies]
spark = [
    "pyspark>=3.4",
]
delta = [
    "deltalake>=1.0,<2",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.9",
    "ruff>=0.4",
    "pandas-stubs>=2.0",
]
all = [
    "dataengkit[spark]",
]

[project.urls]
Homepage = "https://github.com/theoncegreatchamp/dataengkit"
Issues = "https://github.com/theoncegreatchamp/dataengkit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/dataengkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=dataengkit --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
